# fantoch

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  bench  bench_stop  client  clippy.toml  coveralls.sh  proc  rustfmt.toml  server.pid  start.sh  stop.sh  submit-to-coveralls.sh
.github/: dependabot.yml  grcov.yml
.github/workflows/: ci.yml  rust.yml
exp/: .gitignore  .run_log  Makefile  TODO  build.sh  config  fetch_ips.sh  machines  plot_tput_lat.py  run.sh  run_build.sh  setup.sh  tput_lat.py  util.sh
exp/files/: build.sh  machine_ips  machines  topology.py
fantoch/: .gitignore  A  Cargo.toml  Makefile
fantoch/src/: command.rs  config.rs  id.rs  kvs.rs  lib.rs  shared.rs  time.rs  util.rs
fantoch/src/bote/: mod.rs
fantoch/src/client/: data.rs  key_gen.rs  mod.rs  pending.rs  shard_gen.rs  workload.rs
fantoch/src/executor/: aggregate.rs  basic.rs  mod.rs  monitor.rs
fantoch/src/executor/pending/: aggregate.rs  mod.rs  simple.rs
fantoch/src/metrics/: histogram.rs  histogram_data.rs  mod.rs
fantoch/src/planet/: dat.rs  mod.rs  region.rs
fantoch/src/protocol/: base.rs  basic.rs  gc.rs  info.rs  mod.rs
fantoch/src/protocol/gc/: basic.rs  clock.rs  mod.rs
fantoch/src/protocol/info/: locked.rs  mod.rs  sequential.rs
fantoch/src/run/: chan.rs  mod.rs  pool.rs  prelude.rs
fantoch/src/run/rw/: connection.rs  mod.rs
fantoch/src/run/task/: chan.rs  client.rs  delay.rs  execution_logger.rs  executor.rs  metrics_logger.rs  mod.rs  periodic.rs  ping.rs  process.rs  tracer.rs  util.rs
fantoch/src/run/task/client/: batch.rs  batcher.rs  mod.rs  pending.rs  rw.rs  unbatcher.rs
fantoch/src/run/task/server/: client.rs  delay.rs  executor.rs  metrics_logger.rs  mod.rs  ping.rs  process.rs
fantoch/src/sim/: .runner.rs.swp  runner.rs  schedule.rs  simulation.rs
fantoch_bote/: Cargo.toml
fantoch_bote/plot/: Makefile
fantoch_bote/src/: lib.rs  main.rs  protocol.rs  search.rs
fantoch_exp/: .gitignore  Cargo.toml  Makefile  README.md
fantoch_exp/exp_files/: machines  reboot.sh  setup.sh  stop.sh
fantoch_exp/src/: bench.rs  config.rs  exp.rs  lib.rs  machine.rs  main.rs  nuke.rs  ping.rs  progress.rs  util.rs
fantoch_exp/src/testbed/: aws.rs  baremetal.rs  local.rs  mod.rs
fantoch_mc/: Cargo.toml
fantoch_mc/src/: lib.rs
fantoch_plot/: .gitignore  Cargo.toml  Makefile  README.md
fantoch_plot/src/: fmt.rs  lib.rs  main.rs  matplotlib.rs  results_db.rs
fantoch_plot/src/db/: compress.rs  dstat.rs  exp_data.rs  mod.rs  results_db.rs
fantoch_plot/src/plot/: axes.rs  axis.rs  figure.rs  mod.rs  pyplot.rs  spines.rs  style.rs  table.rs  ticker.rs
fantoch_prof/: Cargo.toml
fantoch_prof/src/: lib.rs
fantoch_prof/src/metrics/: float.rs  histogram.rs  mod.rs
fantoch_ps/: .gitignore  A  Cargo.toml  Makefile  parse_sim.py
fantoch_ps/src/: lib.rs  shared.rs  util.rs
fantoch_ps/src/executor/: mod.rs  slot.rs
fantoch_ps/src/executor/graph/: executed.rs  executor.rs  index.rs  level.rs  mod.rs  tarjan.rs
fantoch_ps/src/executor/pred/: executor.rs  index.rs  mod.rs
fantoch_ps/src/executor/table/: executor.rs  mod.rs
fantoch_ps/src/protocol/: atlas.rs  caesar.rs  epaxos.rs  fpaxos.rs  mod.rs  newt.rs  partial.rs  tempo.rs
fantoch_ps/src/protocol/common/: mod.rs  shared.rs  shared_clocks.rs
fantoch_ps/src/protocol/common/graph/: mod.rs
fantoch_ps/src/protocol/common/graph/clocks/: mod.rs  quorum.rs
fantoch_ps/src/protocol/common/graph/clocks/keys/: locked.rs  mod.rs  sequential.rs
fantoch_ps/src/protocol/common/pred/: mod.rs
fantoch_ps/src/protocol/common/pred/clocks/: mod.rs  quorum.rs
fantoch_ps/src/protocol/common/pred/clocks/keys/: locked.rs  mod.rs  sequential.rs
fantoch_ps/src/protocol/common/synod/: gc.rs  mod.rs  multi.rs  single.rs
fantoch_ps/src/protocol/common/table/: mod.rs  votes.rs
fantoch_ps/src/protocol/common/table/clocks/: mod.rs  quorum.rs
fantoch_ps/src/protocol/common/table/clocks/keys/: atomic.rs  locked.rs  mod.rs  sequential.rs
fantoch_timing/: Cargo.toml
fantoch_timing/src/: lib.rs
fantoche/: Cargo.toml
fantoche-protocols/: Cargo.toml
fantoche-protocols/src/protocol/: newt.rs
fantoche/src/: command.rs  config.rs  lib.rs  util.rs
fantoche/src/bote/: protocol.rs  search.rs
fantoche/src/client/: mod.rs
fantoche/src/executor/: mod.rs
fantoche/src/metrics/: float.rs
fantoche/src/planet/: mod.rs
fantoche/src/protocol/: basic.rs  epaxos.rs  mod.rs  newt.rs
fantoche/src/run/: mod.rs  prelude.rs
fantoche_protocols/: Cargo.toml
fantoche_protocols/src/: util.rs
fantoche_protocols/src/executor/: slot.rs
fantoche_protocols/src/protocol/: atlas.rs  epaxos.rs  fpaxos.rs  mod.rs  newt.rs
ping_exp/: .gitignore  README.md  ping_exp.sh
ping_exp_gcp/: Makefile  README.md  ping_exp.sh  region_ping_loop.sh
plot/: Makefile  README.md  plot.py
src/: base.rs  client.rs  clocks.rs  command.rs  config.rs  dat.rs  id.rs  kvs.rs  lib.rs  main.rs  map_merge.rs  newt.rs  planet.rs  proc.rs  router.rs  stats.rs  store.rs  systime.rs  time.rs  util.rs  votes.rs
src/bote/: allstats.rs  bote.rs  float.rs  mod.rs  protocol.rs  search.rs  stats.rs
src/client/: client.rs  mod.rs  pending.rs  workload.rs
src/command/: command.rs  mod.rs  pending.rs
src/executor/: basic.rs  mod.rs  pending.rs  slot.rs
src/executor/graph/: executor.rs  index.rs  mod.rs  tarjan.rs
src/executor/pending/: aggregate.rs  mod.rs  simple.rs
src/executor/table/: executor.rs  mod.rs
src/kvs/: command.rs  mod.rs  pending.rs  store.rs
src/metrics/: btree.rs  float.rs  histogram.rs  mod.rs  stats.rs
src/newt/: clocks.rs  mod.rs  quorum_clocks.rs  router.rs  votes.rs  votes_table.rs
src/planet/: dat.rs  mod.rs  planet.rs  region.rs
src/proc/: base.rs  mod.rs  tosend.rs
src/protocol/: atlas.rs  base.rs  basic.rs  epaxos.rs  fpaxos.rs  mod.rs  newt.rs  tosend.rs
src/run/: forward.rs  mod.rs  pool.rs  prelude.rs  task.rs
src/run/rw/: mod.rs  (+1 more)
src/sim/: mod.rs  router.rs  runner.rs  schedule.rs  simulation.rs
src/stats/: mod.rs  stats.rs
timing/: Cargo.toml
(+95 files in other folders)
