[package]
name = "planet_sim"
version = "0.1.0"
edition = "2018"

authors = ["Vitor Enes <vitorenesduarte@gmail.com>"]
license = "MIT/Apache-2.0"

[dependencies]
threshold = "0.6.5"
rand = "0.7.3"
permutator = "0.4.0"
serde = { version = "1.0.104", features = ["derive"] }
bincode = "1.2.1"
rayon = "1.3.0"
futures = "0.3.1"
bytes = "0.5.3"
tokio = { git = "https://github.com/vitorenesduarte/tokio", branch = "buf_stream_with_capacity", features = ["full"] }
tokio-util = { git = "https://github.com/vitorenesduarte/tokio", branch = "buf_stream_with_capacity", features = ["codec"] }
clap = "2.33.0"

[dev-dependencies]
quickcheck = "0.9.1"
quickcheck_macros = "0.9.1"

[profile.release]
debug = true
