[package]
name = "planet_sim"
version = "0.1.0"
edition = "2018"

authors = ["Vitor Enes <vitorenesduarte@gmail.com>"]
license = "MIT/Apache-2.0"

[dependencies]
ahash = "0.3.2"
bincode = "1.2.1"
bytes = "0.5.4"
clap = "2.33.0"
dashmap = "3.4.0"
futures = "0.3.3"
lazy_static = "1.4.0"
num_cpus = "1.12.0"
permutator = "0.4.0"
rand = "0.7.3"
rayon = "1.3.0"
serde = { version = "1.0.104", features = ["derive"] }
threshold = "0.6.8"
tokio = { version = "0.2.11", features = ["full", "parking_lot"] }
tokio-util = { version = "0.2.0", features = ["codec"] }

parking_lot = "0.10.0"

[dev-dependencies]
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"

[profile.release]
debug = false
