[workspace]

members = [
  "fantoch",
  "fantoch_ps",
  "fantoch_bote",
  "fantoch_timing",
#  "fantoch_mc",
  "fantoch_exp",
  "fantoch_plot",
]

[profile.release]
# Enable link-time optimization, eliminates more code and inlines across crate boundaries.
# "true" is the same as "fat"
lto = true

# codegen-units of 1 gives best optimization, but disables parallel building.
codegen-units = 1

# Includes debug information in release builds necessary for profiling.
# This does not slow down the executable.
debug = true

# The default optimization level is 3 for release mode builds.
opt-level = 3

# Rust by default uses stack unwinding, which costs performance. Disabling that should reduce code size and improve cache usage.
panic = "abort"

# TODO maybe also use a different allocator: https://deterministic.space/high-performance-rust.html
