[package]
name = "fantoch"
version = "0.1.0"
edition = "2021"

authors = ["Vitor Enes <vitorenesduarte@gmail.com>"]
license = "MIT/Apache-2.0"

[features]
default = ["run"]
run = ["tokio", "tokio-util"]
max_level_debug = []
max_level_trace = []

[dependencies]
ahash = "0.7.6"
bincode = "1.3.3"
bytes = "1.1.0"
color-eyre = "0.5.11"
dashmap = "5.0.0"
flate2 = "1.0.22"
futures = { version = "0.3.19", default-features = false, features = ["alloc"] }
hashbrown = { version = "0.11.2", features = ["serde", "ahash"] }
parking_lot = "0.12.0"
num_cpus = "1.13.0"
rand = "0.8.4"
serde = { version = "1.0.132", features = ["derive", "rc"] }
threshold = "0.9.1"
tokio = { version = "1.15.0", features = ["full", "parking_lot"], optional = true }
tokio-util = { version = "0.6.9", features = ["codec"], optional = true }
tracing = "0.1.29"
tracing-appender = "0.2.0"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
zipf = "7.0.0"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
