[package]
name = "fantoch"
version = "0.1.0"
edition = "2021"

authors = ["Vitor Enes <vitorenesduarte@gmail.com>"]
license = "MIT/Apache-2.0"

[features]
default = ["run"]
run = ["tokio", "tokio-util"]
max_level_debug = []
max_level_trace = []

[dependencies]
ahash = "0.8.3"
bincode = "1.3.3"
bytes = "1.1.0"
color-eyre = "0.6.1"
dashmap = "5.1.0"
flate2 = "1.0.22"
futures = { version = "0.3.21", default-features = false, features = ["alloc"] }
hashbrown = { version = "0.12.0", features = ["serde", "ahash"] }
parking_lot = "0.12.0"
num_cpus = "1.13.1"
rand = "0.8.5"
serde = { version = "1.0.136", features = ["derive", "rc"] }
threshold = "0.9.1"
tokio = { version = "1.17.0", features = ["full", "parking_lot"], optional = true }
tokio-util = { version = "0.7.0", features = ["codec"], optional = true }
tracing = "0.1.31"
tracing-appender = "0.2.1"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
zipf = "7.0.0"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
