[package]
name = "fantoch_bote"
version = "0.1.0"
edition = "2018"

authors = ["Vitor Enes <vitorenesduarte@gmail.com>"]
license = "MIT/Apache-2.0"

[dependencies]
bincode = "1.2.1"
permutator = "0.4.0"
rayon = "1.3.0"
serde = { version = "1.0.106", features = ["derive"] }

fantoch = { path = "../fantoch" }

[dev-dependencies]
