[package]
name = "fantoch_bote"
version = "0.1.0"
edition = "2018"

authors = ["Vitor Enes <vitorenesduarte@gmail.com>"]
license = "MIT/Apache-2.0"

[dependencies]
bincode = "1.3.1"
permutator = "0.4.0"
rayon = "1.3.1"
serde = { version = "1.0.114", features = ["derive"] }

fantoch = { path = "../fantoch" }
fantoch_prof = { path = "../fantoch_prof" }

[dev-dependencies]
