[package]
name = "fantoch_bote"
version = "0.1.0"
edition = "2021"

authors = ["Vitor Enes <vitorenesduarte@gmail.com>"]
license = "MIT/Apache-2.0"

[dependencies]
bincode = "1.3.3"
permutator = "0.4.0"
rayon = "1.5.1"
serde = { version = "1.0.132", features = ["derive"] }

fantoch = { path = "../fantoch" }

[dev-dependencies]
