[package]
name = "fantoch_exp"
version = "0.1.0"
edition = "2021"

authors = ["Vitor Enes <vitorenesduarte@gmail.com>"]
license = "MIT/Apache-2.0"

# by default, run the main binary
default-run = "main"

[features]
default = ["exp"]
exp = ["futures", "rusoto_core", "rusoto_credential", "rusoto_ec2", "tracing-futures", "tracing-subscriber", "tokio", "tsunami"]

[dependencies]
bincode = "1.3.3"
color-eyre = "0.6.1"
indicatif = "0.17.1"
flate2 = "1.0.22"
futures = { version = "0.3.21", default-features = false, features = [], optional = true }
rusoto_core = { version = "0.46.0", optional = true }
rusoto_credential = { version = "0.46.0", optional = true }
rusoto_ec2 = { version = "0.46.0", optional = true }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tracing = "0.1.31"
tracing-futures = { version = "0.2.5", optional = true }
tracing-subscriber = { version = "0.3.9", features = ["fmt"], optional = true }
tokio = { version = "1.17.0", features = ["full"], optional = true }
tsunami = { version = "0.11.1", default-features = false, features = ["aws", "baremetal"], optional = true }

fantoch = { path = "../fantoch", default-features = false }

[[bin]]
name = "main"
required-features = ["exp"]

[[bin]]
name = "ping"
required-features = ["exp"]
