[package]
name = "fantoch_plot"
version = "0.1.0"
edition = "2018"

authors = ["Vitor Enes <vitorenesduarte@gmail.com>"]
license = "MIT/Apache-2.0"

# by default, run the main binary
default-run = "main"

[dependencies]
pyo3 = "0.14.1"
color-eyre = "0.5.10"
csv = "1.1.5"
rayon = "1.5.0"
serde = "1.0.118"

fantoch = { path = "../fantoch" }
fantoch_exp = { path = "../fantoch_exp", default-features = false }
