[package]
name = "fantoch_plot"
version = "0.1.0"
edition = "2021"

authors = ["Vitor Enes <vitorenesduarte@gmail.com>"]
license = "MIT/Apache-2.0"

# by default, run the main binary
default-run = "main"

[dependencies]
pyo3 = { version = "0.15.0", features = ["auto-initialize"] }
color-eyre = "0.5.11"
csv = "1.1.6"
rayon = "1.5.1"
serde = "1.0.126"

fantoch = { path = "../fantoch" }
fantoch_exp = { path = "../fantoch_exp", default-features = false }
