[package]
name = "fantoch_plot"
version = "0.1.0"
edition = "2021"

authors = ["Vitor Enes <vitorenesduarte@gmail.com>"]
license = "MIT/Apache-2.0"

# by default, run the main binary
default-run = "main"

[dependencies]
pyo3 = { version = "0.17.2", features = ["auto-initialize"], optional = true }
color-eyre = "0.6.1"
csv = "1.1.6"
rayon = "1.5.1"
serde = "1.0.136"

fantoch = { path = "../fantoch" }
fantoch_exp = { path = "../fantoch_exp", default-features = false }

[[bin]]
name = "main"
required-features = ["pyo3"]

[[bin]]
name = "plot_sim_output"
required-features = ["pyo3"]

[[bin]]
name = "migrate"
required-features = []

[[bin]]
name = "data_to_json"
required-features = []
