[package]
name = "fantoch_prof"
version = "0.1.0"
edition = "2018"

authors = ["Vitor Enes <vitorenesduarte@gmail.com>"]
license = "MIT/Apache-2.0"

[dependencies]
dashmap = { git = "https://github.com/vitorenesduarte/dashmap", rev = "b8d83eec3179cf849ad4f2038001b46545daed1e" }
jemallocator = "0.3.2"
quanta = "0.6.3"
serde = { version = "1.0.114", features = ["derive"] }
tracing = "0.1.18"

[dev-dependencies]
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
