[package]
name = "fantoch_prof"
version = "0.1.0"
edition = "2018"

authors = ["Vitor Enes <vitorenesduarte@gmail.com>"]
license = "MIT/Apache-2.0"

[dependencies]
dashmap = { git = "https://github.com/vitorenesduarte/dashmap", rev = "4cabdf423002be85fe5ecbf7308dbd9754d33011" }
jemallocator = "0.3.2"
quanta = "0.6.5"
serde = { version = "1.0.118", features = ["derive"] }
tracing = "0.1.22"

[dev-dependencies]
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
