[package]
name = "fantoch_prof"
version = "0.1.0"
edition = "2018"

authors = ["Vitor Enes <vitorenesduarte@gmail.com>"]
license = "MIT/Apache-2.0"

[dependencies]
dashmap = "4.0.0"
jemallocator = "0.3.2"
quanta = "0.6.5"
serde = { version = "1.0.118", features = ["derive"] }
tracing = "0.1.22"

[dev-dependencies]
quickcheck = "1.0.1"
quickcheck_macros = "0.9.1"
