[package]
name = "fantoch_ps"
version = "0.1.0"
edition = "2018"

authors = ["Vitor Enes <vitorenesduarte@gmail.com>"]
license = "MIT/Apache-2.0"

[features]
jemalloc = ["jemallocator"]
amortize = ["fantoch/amortize"]
prof = ["fantoch/prof", "jemallocator"]
parallel-sim = ["rayon"]
max_level_debug = ["fantoch/max_level_debug"]
max_level_trace = ["fantoch/max_level_trace"]

[dependencies]
ahash = "0.6.2"
clap = "2.33.3"
color-eyre = "0.5.10"
futures = { version = "0.3.8", default-features = false, features = [] }
rand = "0.8.0"
rayon = { version = "1.5.0", optional = true }
serde = { version = "1.0.118", features = ["derive", "rc"] }
threshold = "0.8.15"
tokio = { version = "1.0.2", features = ["full", "parking_lot"] }
tracing = "0.1.22"
tracing-appender = "0.1.1"
parking_lot = { version = "0.11.1", features = ["serde"] }
num_cpus = "1.13.0"

jemallocator = { version = "0.3.2", optional = true }

fantoch = { path = "../fantoch" }
fantoch_prof = { path = "../fantoch_prof" }

[dev-dependencies]
permutator = "0.4.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"

[[bin]]
name = "simulation"
required-features = ["parallel-sim"]
