[package]
name = "fantoch_ps"
version = "0.1.0"
edition = "2021"

authors = ["Vitor Enes <vitorenesduarte@gmail.com>"]
license = "MIT/Apache-2.0"

[features]
jemalloc = ["jemallocator"]
parallel-sim = ["rayon"]
max_level_debug = ["fantoch/max_level_debug"]
max_level_trace = ["fantoch/max_level_trace"]

[dependencies]
ahash = "0.7.6"
clap = "3.0.6"
color-eyre = "0.5.11"
futures = { version = "0.3.19", default-features = false, features = [] }
rand = "0.8.4"
rayon = { version = "1.5.1", optional = true }
serde = { version = "1.0.132", features = ["derive", "rc"] }
threshold = "0.9.1"
tokio = { version = "1.15.0", features = ["full", "parking_lot"] }
tracing = "0.1.29"
tracing-appender = "0.2.0"
parking_lot = { version = "0.11.2", features = ["serde"] }
num_cpus = "1.13.0"

jemallocator = { version = "0.3.2", optional = true }

fantoch = { path = "../fantoch" }

[dev-dependencies]
permutator = "0.4.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"

[[bin]]
name = "simulation"
required-features = ["parallel-sim"]
