[package]
name = "fantoch_timing"
version = "0.1.0"
edition = "2018"

authors = ["Vitor Enes <vitorenesduarte@gmail.com>"]
license = "MIT/Apache-2.0"

[dependencies]
dashmap = { git = "https://github.com/vitorenesduarte/dashmap", rev = "b8d83eec3179cf849ad4f2038001b46545daed1e" }
quanta = "0.6.0"
hdrhistogram = "7.1.0"
tracing = "0.1.16"
